# ngx_vts

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  build.rs  config  config.make  nginx.conf.example  test-nginx.conf  test_cache_integration.rs  test_cache_stats.rs  test_directives.md  test_issue1_resolution.rs  test_issue2_resolution.rs  test_issue3_integrated_flow.rs  test_issue3_resolution.rs  test_log_phase_handler.rs  test_nginx.conf  testing.sh
.github/workflows/: ci.yml
docs/: CLAUDE_CODE_INSTRUCTIONS.md  IMPLEMENTATION_PLAN.md
examples/: README.md  docker-compose.yml  load.sh
examples/grafana/dashboards/: nginx-vts.json
examples/grafana/provisioning/dashboards/: dashboards.yml
examples/nginx/: Dockerfile  nginx.conf
examples/prometheus/: prometheus.yml
src/: cache_stats.rs  config.rs  connection_stats.rs  handlers.rs  lib.rs  ngx_http_vts_module.c  ngx_vts_wrapper.c  prometheus.rs  shm.rs  stats.rs  upstream_stats.rs  vts_node.rs
src/prometheus/: cache.rs  connections.rs  mod.rs  server.rs  upstream.rs
